@@ -48,3 +48,6 @@ module = Net::IDN::Encode       ; required for format 'idn-hostname'
 
 [Breaks]
 JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
+JSON::Schema::Modern::Document::OpenAPI = < 0.051   ; enforcing schema locations via 'entities'
+
+[Test::CheckBreaks]
