@@ -23,9 +23,9 @@ keyword-independence.json                  812          0     0
 loose-types-const-enum.json                  8          0     0
 recursive-dynamic.json                       4          0     0
 ref-and-id.json                              6          0     0
-ref.json                                    12          0     0
+ref.json                                    10          0     0
 short-circuit.json                          20          0     0
 unknownKeyword.json                          4          0     0
 vocabulary.json                              5          0     0
 ---------------------------------------------------------------
-TOTAL                                      982          0     0
+TOTAL                                      980          0     0
