@@ -63,6 +63,6 @@ optional/float-overflow.json                 1          0     0
 optional/format-assertion.json               4          0     0
 optional/no-schema.json                      3          0     0
 optional/non-bmp-regex.json                 12          0     0
-optional/refOfUnknownKeyword.json            4          0     0
+optional/refOfUnknownKeyword.json            2          2     0
 ---------------------------------------------------------------
-TOTAL                                     1332         29     0
+TOTAL                                     1330         31     0
