@@ -24,9 +24,9 @@ keyword-independence.json                  884          0     0
 loose-types-const-enum.json                  8          0     0
 recursive-dynamic.json                       2          0     0
 ref-and-id.json                              6          0     0
-ref.json                                    12          0     0
+ref.json                                    10          0     0
 short-circuit.json                          20          0     0
 unknownKeyword.json                          4          0     0
 vocabulary.json                             11          0     0
 ---------------------------------------------------------------
-TOTAL                                     1065          0     0
+TOTAL                                     1063          0     0
